<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>camera_view</name>
    <version>0.0.1</version>
    <description>Displays image streams from cameras or other nodes for debugging much faster than image_view</description>
    <maintainer email="hunterbaker@me.com">Hunter Baker</maintainer>
    <license>GPL-3.0-only</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>ros2launch</exec_depend>

    <depend>rclcpp</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>libopencv-dev</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>camera_info_manager</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
